<resources>
    <string name="app_name">Blutspende Kompatibilität</string>
    <string name="next">Next</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="previous">Previous</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string-array name="blood_types">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
</resources>
